# soushi

./: CLAUDE.md  Cargo.nix  Cargo.toml  flake.nix
src/: engine.rs  error.rs  lib.rs
tests/: loader.rs
tests/fixtures/: 01_math.rhai  02_strings.rhai  03_functions.rhai  not_a_script.txt
